--- a/themes/pagedjs/assets/css/base/fonts.css
+++ b/themes/pagedjs/assets/css/base/fonts.css
@@ -73,20 +73,26 @@
 
 @font-face {
   font-family:"Victor Mono";
-  src:url("../fonts/VictorMono-Regular.woff2") format("woff2"),url("../fonts/VictorMono-Regular.woff") format("woff"),url("../fonts/VictorMono-Regular.otf") format("opentype");
+  src:url("../fonts/VictorMono-Regular.woff2") format("woff2"),
+      url("../fonts/VictorMono-Regular.woff") format("woff"),
+      url("../fonts/VictorMono-Regular.otf") format("opentype");
   font-style:normal;font-weight:400;
 }
 
 
 @font-face {
   font-family:"Linden Hill";
-  src:url("../fonts/LindenHill-Regular.woff2") format("woff2"),url("../fonts/LindenHill-Regular.woff") format("woff"),url("../fonts/LindenHill-Regular.otf") format("opentype");
+  src:url("../fonts/LindenHill-Regular.woff2") format("woff2"),
+      url("../fonts/LindenHill-Regular.woff") format("woff"),
+      url("../fonts/LindenHill-Regular.otf") format("opentype");
   font-style:normal;font-weight:400;
 }
       
 @font-face {
   font-family:"Linden Hill";
-  src:url("../fonts/LindenHill-Italic.woff2") format("woff2"),url("../fonts/LindenHill-Italic.woff") format("woff"),url("../fonts/LindenHill-Italic.otf") format("opentype");
+  src:url("../fonts/LindenHill-Italic.woff2") format("woff2"),
+      url("../fonts/LindenHill-Italic.woff") format("woff"),
+      url("../fonts/LindenHill-Italic.otf") format("opentype");
   font-style:italic;font-weight:400;
 }
       
