--- a/themes/pagedjs/assets/css/base/menu.css
+++ b/themes/pagedjs/assets/css/base/menu.css
@@ -11,7 +11,10 @@
   background: var(--color-paper);
   z-index: 9999999;
   align-items: flex-end;
-  /* box-shadow: -16px 0px 0 var(--color-paper), 16px 0px 0 var(--color-paper), -16px -16px 0 var(--color-paper); */
+  /* border-image: linear-gradient(red, yellow) ; */
+  /* border-width: 0 0 20px 0; */
+
+  box-shadow: -4px 4px 0 var(--color-paper), 0px 4px 0 var(--color-paper), 4px 4px 0 var(--color-paper);
   .baseline {
     line-height: 1;
     position: relative;
