--- a/themes/pagedjs/assets/css/page/list.css
+++ b/themes/pagedjs/assets/css/page/list.css
@@ -25,7 +25,6 @@
   ul li {
     list-style-type: none;
     font-size: 1em;
-    
 
     > ul {
       margin-bottom: 0.5em;
@@ -102,11 +101,16 @@
         font-style: italic;
 
         &::after {
-          line-height: 1.2em;
           padding-left: 1ch;
           content: counter(doc);
           float: right;
           background: var(--color-paper);
+          font-family: var(--font-sans);
+          font-style: normal;
+          font-size: 0.8em;
+          bottom: 0;
+          position: relative;
+          top: 0.2em;
         }
       }
     }
