--- a/themes/pagedjs/assets/css/page/homepage.css
+++ b/themes/pagedjs/assets/css/page/homepage.css
@@ -1,31 +1,37 @@
 .homepage {
-  /* height: 100vh;
-  display: grid; */
 }
 
 .homepage main {
-  /* margin: auto; */
-
 }
 
-.homepage  {
-  min-height: 80vh; 
+.homepage {
+  min-height: 80vh;
+  max-width: 800px;
   display: grid;
-  grid-template-rows: 36.5px auto;
-
+  /* grid-template-rows: 36.5px auto; */
+  .running-head {
+    height: 20px;
+    border-bottom: 0 solid transparent;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    li {
+      margin: 0 2ch;
+      padding: 0;
+    }
+  }
 }
 
-.homepage article  {
+.homepage article {
   display: flex;
   align-content: center;
   justify-content: center;
   grid-template-columns: [left] 50% [main];
   grid-column: left/end;
   /* display: grid; */
-  margin-top: 4em;
+  /* margin-top: 4em; */
   grid-gap: 8ch;
   font-size: 1em;
-
 
   p {
     margin: 0 auto;
@@ -34,5 +40,46 @@
     margin-bottom: 1em;
     text-align: center;
     font-size: 1.5em;
+  }
+}
+
+.homepage .contents {
+  flex-direction: column;
+  display: flex;
+  flex: 1 2;
+  justify-items: space-around;
+}
+
+.homepage .intro-logo {
+  width: 41%;
+  margin: 0 auto 2em;
+  display: block;
+}
+
+
+
+.homepage article ul {
+  list-style-type: none;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  display: flex;
+  /* align-self: flex-end; */
+  justify-content: center;
+  justify-self: flex-end;
+  margin-top: auto;
+
+  li::before {
+    content: none;
+  }
+
+  li {
+    letter-spacing: .2ch;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    flex-direction: row;
+    display: inline-block;
+    font-family: var(--font-sans);
+    padding: 1em;
   }
 }
