--- a/themes/pagedjs/assets/css/base/menu.css
+++ b/themes/pagedjs/assets/css/base/menu.css
@@ -11,6 +11,8 @@
   background: var(--color-paper);
   z-index: 9999999;
   align-items: flex-end;
+  height: 20px;
+
   /* border-image: linear-gradient(red, yellow) ; */
   /* border-width: 0 0 20px 0; */
 
