--- a/themes/pagedjs/layouts/_default/baseof.html
+++ b/themes/pagedjs/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="{{ if .Params.colorBackground }} --color-background:{{ .Params.colorBackground }}; {{ end }} {{ if .Params.colorBody }} --color-body:{{ .Params.colorBody }}; {{ end }} {{ if .Params.colorCrop }} --color-cropmarks:{{ .Params.colorCrop }}; {{ end }}">
+<html style="{{ if .Params.colorBackground }} --color-background:{{ .Params.colorBackground }}; {{ end }} {{ if .Params.colorBody }} --color-body:{{ .Params.colorBody }}; {{ end }} {{ if .Params.colorCrop }} --color-cropmarks:{{ .Params.colorCrop }}; {{ end }} {{ if .Params.symbolContent }} --symbol-content: '{{ .Params.symbolContent }}'; {{ end }}">
 
   <head>
     <meta charset="utf-8">
