--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -301,12 +301,16 @@ header {
   margin-bottom: 2em;
   /* font-weight: 700; */
   &::before {
-    content: " ";
-    transform: rotate(45deg);
-    border: 4px solid #eee;
+    content: var(--symbol-content);
+    /* transform: rotate(45deg); */
+    /* border: 4px solid #eee; */
     z-index: -1;
     width: 10em;
     height: 10em;
+    font-size: 20em;
+    top: -0.5em;
+    left: -0.3em;
+    color: var(--color-lightest-grey);
     display: block;
     position: absolute;
   }
@@ -322,6 +326,7 @@ header {
     font-family: var(--font-serif);
     position: relative;
     text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
+    /* filter: drop-shadow(-2px 0px 0px var(--color-paper)) drop-shadow(0px 2px 0px var(--color-paper)) drop-shadow(-2px -2px 0px var(--color-paper)) drop-shadow(2px 2px 0px var(--color-paper)) ; */
     border: 0px solid transparent;
 
     &::after {
@@ -350,6 +355,8 @@ header {
     margin-top: 2em;
     margin-bottom: 3em;
     text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
+    /* filter: drop-shadow(-2px 0px 0px var(--color-paper)) drop-shadow(0px 2px 0px var(--color-paper)) drop-shadow(-2px -2px 0px var(--color-paper)) drop-shadow(2px 2px 0px var(--color-paper)) ; */
+
   }
 
   .meta {
