--- a/themes/pagedjs/assets/css/base/menu.css
+++ b/themes/pagedjs/assets/css/base/menu.css
@@ -12,6 +12,7 @@
   z-index: 9999999;
   align-items: flex-end;
   height: 50px;
+  font-size: 0.9em;
 
   /* border-image: linear-gradient(red, yellow) ; */
   /* border-width: 0 0 20px 0; */
