--- a/themes/pagedjs/layouts/_default/single.html
+++ b/themes/pagedjs/layouts/_default/single.html
@@ -9,7 +9,15 @@
       {{ end }}
       <h1 id="title">{{ .Title }}</h1>
       {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }} <br/><span class="tags">      {{ partial "tag-coma.html" . }}</span></p>{{end}}
-        {{ if .Params.symbolText }} <div class="symbol-text">{{ .Params.symbolText | markdownify }}</div>{{end}}
+
+        {{ if .Params.symbolText }} 
+        <div class="symbol-text">{{ .Params.symbolText | markdownify }}</div>
+        
+        {{ else }}
+        
+        <div class="symbol-text">The characters in the Dingbats block are derived from the ITC Zapf Dingbats series 100, a set of glyphs which make up the “Zapf Dingbat” font currently available on most laser printers. The Zapf Dingbats are considered an industry standard. The font was created in 1977 and 1978 by the German type designer Hermann Zapf.</div>
+
+        {{end}}
     </header>
     {{ end }}
 
