--- a/themes/pagedjs/assets/css/base/footer.css
+++ b/themes/pagedjs/assets/css/base/footer.css
@@ -12,7 +12,7 @@ footer {
 
 
   --color-accent: var(--color-primary);
-  margin: 7em 0 0;
+  margin: 10em 0 0;
   background: var(--color-light);
   color: var(--color-primary);
   font-size: .8em;
@@ -21,7 +21,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-top: 1px solid var(--color-lightest-grey);
+  /* border-top: 1px solid var(--color-lightest-grey); */
 
   p {
     line-height: 1.4;
@@ -32,6 +32,7 @@ footer {
     color: var(--color-primary);
     background: transparent;
     margin-top: 2em;
+    text-decoration: underline;
   }
 
   svg {
