--- a/themes/pagedjs/assets/css/base/layout.css
+++ b/themes/pagedjs/assets/css/base/layout.css
@@ -85,7 +85,7 @@ article {
 
 
 .paginator {
-  border-top: 1px solid var(--color-grey);
+  /* border-top: 1px solid var(--color-grey); */
   margin-top: 4em;
   padding-top: 1em;
   display: flex;
@@ -114,11 +114,23 @@ article {
       letter-spacing: 0.2ch;
       margin-bottom: 1em;
     }
+   
+    
   }
 
   .next::before {
     content: "Next";
     text-align: right;
+  
+  
+  }
+  .next {
+    border-right: 2px solid black;
+    padding-right: 2ch;
+  }
+  .previous {
+    border-left: 2px solid black;
+    padding-left: 2ch;
   }
 }
 
