--- a/themes/pagedjs/layouts/partials/menu.html
+++ b/themes/pagedjs/layouts/partials/menu.html
@@ -1,4 +1,4 @@
-    <nav class="menu" role="main">
+    <nav class="menu hide" role="main">
         <ul>
             {{ $currentPage := . }}
             {{ range .Site.Menus.main }}
