--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -308,8 +308,8 @@ header {
     /* transform: rotate(45deg); */
     /* border: 4px solid #eee; */
     z-index: -1;
-    width: 10em;
-    height: 10em;
+    /* width: 10em; */
+    /* height: 10em; */
     font-size: 20em;
     top: -0.5em;
     left: -0.3em;
@@ -326,6 +326,7 @@ header {
     color: var(--color-body);
     font-size: 4.25em;
     line-height: 1.1;
+    margin-top: .3em;
     font-family: var(--font-serif);
     position: relative;
       /* text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper); */
@@ -356,6 +357,7 @@ header {
     max-width: 51ch;
     display: block;
     margin-bottom: 3em;
+    margin-top: 2em;
     /* text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper); */
     /* filter: drop-shadow(-2px 0px 0px var(--color-paper)) drop-shadow(0px 2px 0px var(--color-paper)) drop-shadow(-2px -2px 0px var(--color-paper)) drop-shadow(2px 2px 0px var(--color-paper)) ; */
 
@@ -367,6 +369,7 @@ header {
     font-family: var(--font-sans);
     font-weight: 400;
     margin-bottom: 0px;
+    margin-top: 0;
     /* border-bottom: 1px solid grey; */
     a {
       font-style: normal;
