--- a/themes/pagedjs/assets/css/page/list.css
+++ b/themes/pagedjs/assets/css/page/list.css
@@ -1,6 +1,7 @@
 .list {
   counter-reset: doc;
   grid-column: main/end;
+
   a {
     text-decoration: none;
     background: none;
@@ -52,6 +53,7 @@
   .article {
     margin-left: 0;
     margin-top: 3em;
+
     .intro {
       font-family: var(--font-sans);
       font-size: 1em;
@@ -75,6 +77,7 @@
       position: relative;
       border-color: transparent;
       margin-bottom: 0;
+      line-height: 1.1;
 
       &::before {
         content: ".................................................................................................................................................";
@@ -91,18 +94,25 @@
 
       a {
         counter-increment: doc;
-        background: var(--color-paper);
         position: relative;
         z-index: 100;
         padding-right: 0.5ch;
         font-style: italic;
+        line-height: 1.1;
+
+        span {
+          background: var(--color-paper);
+          /* max-width: 70%; */
+          display: inline;
+          padding-right: 1ch;
+        }
 
         &::after {
           padding-left: 1ch;
           content: counter(doc);
           float: right;
           background: var(--color-paper);
-          font-family: var(--font-sans);
+          /* font-family: var(--font-sans); */
           font-style: normal;
           font-size: 0.8em;
           bottom: 0;
