--- a/themes/pagedjs/assets/css/base/mobile.css
+++ b/themes/pagedjs/assets/css/base/mobile.css
@@ -77,7 +77,8 @@
       padding-top: 1em;
       width: 100%;
       background: white;
-      padding: 2em 35%;
+    padding: 1.5em 35% 0.5em ;
+
     }
 
     .menu {
@@ -85,16 +86,16 @@
       transition: all .6s;
       opacity: 1;
       padding-top: 0;
-      margin-bottom: 2em;
+      /* margin-bottom: 2em; */
       display: flex;
       flex-direction: column;
     }
 
     .menu.hide {
       opacity: 0;
-      margin-top: -50vh;
+      /* margin-top: -50vh; */
       /* background: red; */
-      /* height: 0; */
+      height: 0;
     }
 
     .menu ul {
