--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -196,7 +196,7 @@ article {
   pre {
     padding: 0em 0.5em;
     font-weight: 400;
-    font-size: .85em;
+    font-size: 1em;
     line-height: 1.35;
     padding: 0.2em 0.5em;
     border: 1px solid lightgrey;
@@ -357,7 +357,8 @@ header {
     max-width: 51ch;
     display: block;
     margin-bottom: 3em;
-    margin-top: 2em;
+    /* margin-top: 2em; */
+    
     /* text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper); */
     /* filter: drop-shadow(-2px 0px 0px var(--color-paper)) drop-shadow(0px 2px 0px var(--color-paper)) drop-shadow(-2px -2px 0px var(--color-paper)) drop-shadow(2px 2px 0px var(--color-paper)) ; */
 
