--- a/themes/pagedjs/assets/css/page/homepage.css
+++ b/themes/pagedjs/assets/css/page/homepage.css
@@ -21,7 +21,18 @@
       padding: 0;
     }
     */
+    .menu {
+    height: auto;
+    }
   } 
+
+
+.back-home {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+}
+
 }
 
 .homepage article {
