--- a/themes/pagedjs/layouts/_default/index.html
+++ b/themes/pagedjs/layouts/_default/index.html
@@ -5,6 +5,9 @@
 
 {{ define "running" }}
       <div class="running-head">
+          <!-- <button class="back-home">
+              {{ partial "paged-logo" .}}
+          </button> -->
         {{ partial "menu" . }}
     </div>
 {{ end }}
