--- a/themes/pagedjs/layouts/_default/list.html
+++ b/themes/pagedjs/layouts/_default/list.html
@@ -7,6 +7,10 @@
                 {{ if eq .Page.Section "documentation"}}
                 {{ .TableOfContents }}
                 {{else}}
+                <div class="meta">
+                {{ if .Params.author }}Written by <span class="author"> {{ .Params.author }} </span> {{ end }}
+                {{ if .Params.date }}, the <span class="date"> {{ .Params.date }} </span> {{ end }}
+            </div>
                 {{ if .Params.intro }}<span class="intro"> {{ .Params.intro }} </span> {{ end }}
                 {{end}}
                 </a>
