--- a/themes/pagedjs/layouts/_default/list.html
+++ b/themes/pagedjs/layouts/_default/list.html
@@ -7,11 +7,13 @@
                 {{ if eq .Page.Section "documentation"}}
                 {{ .TableOfContents }}
                 {{else}}
+                
+                {{ if .Params.intro }}
                 <div class="meta">
-                {{ if .Params.author }}Written by <span class="author"> {{ .Params.author }} </span> {{ end }}
-                {{ if .Params.date }}, the <span class="date"> {{ .Params.date }} </span> {{ end }}
-            </div>
-                {{ if .Params.intro }}<span class="intro"> {{ .Params.intro }} </span> {{ end }}
+                    {{ if .Params.author }}Written by <span class="author"> {{ .Params.author }} </span> {{ end }}
+                    {{ if and .Params.author .Date }} / {{ end }}
+                    {{ if .Params.date }} the <span class="date"> {{ dateFormat "January 2, 2006" .Date }} </span> {{ end }}
+                <span class="intro"> {{ .Params.intro }} </span> {{ end   }}
                 {{end}}
                 </a>
             </li>
