--- a/themes/pagedjs/layouts/_default/index.html
+++ b/themes/pagedjs/layouts/_default/index.html
@@ -8,6 +8,8 @@
           <!-- <button class="back-home">
               {{ partial "paged-logo" .}}
           </button> -->
+      <button class="menu-call">MENU</button>
+
         {{ partial "menu" . }}
     </div>
 {{ end }}
