--- a/themes/pagedjs/layouts/partials/footer.html
+++ b/themes/pagedjs/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <!-- <div class="postit"> -->
-        <p class="foot-content">Paged.js is maintained by the nice folks of the 
+        <p class="foot-content">Paged.js is maintained by the nice folks at 
         <a href="https://www.cabbagetreelabs.org" class="footer-logo">Cabbage Tree Labs</a></p>
 
             {{/*  {{ partial "ctl-logo.html" }}  */}}
